Cambios a bio.html y contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -11,24 +11,38 @@
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="nav-bar">
-        <div class="nav-container">
+    <div class="nav-bar">
+      <div class="nav-container">
+        <div class="logo">
           <div class="logo">
-            <div class="logo">
-              <a href="index.html">
-                <h1>fito segrera</h1>
-              </a>
-            </div>
+            <a href="index.html">
+              <h1>fito segrera</h1>
+            </a>
           </div>
-          <nav class="menu">
-            <a class="menu-item" href="bio.html">Bio</a>
-            <a class="menu-item" href="proyectos.html">Proyectos</a>
-            <a class="menu-item" href="contacto.html">Contacto</a>
-          </nav>
+        </div>
+        <nav class="menu">
+          <a class="menu-item" href="bio.html">Bio</a>
+          <a class="menu-item" href="proyectos.html">Proyectos</a>
+          <a class="menu-item" href="contacto.html">Contacto</a>
+        </nav>
+      </div>
+    </div>
+    <div class="container">
+      <div class="hero">
+        <div class="hero-container">
+          <div class="facebook">
+            <a href="https://www.facebook.com/fitosegrera" target="_blank">
+              <img src="img/facebook.png" />
+            </a>
+          </div>
+          <div class="gmail">
+            <a href="fitosegrera@gmail.com" target="_blank">
+              <img src="img/gmail.png" />
+              <h2>fitosegrera@gmail.com</h2>
+            </a>
+          </div>
         </div>
       </div>
-      <h1>Contacto</h1>
     </div>
   </body>
 </html>
