Numero Telefono agregado

--- a/contacto.html
+++ b/contacto.html
@@ -39,6 +39,7 @@
             <a href="fitosegrera@gmail.com" target="_blank">
               <img src="img/gmail.png" />
               <h2>fitosegrera@gmail.com</h2>
+              <h2>Tel: 123456789</h2>
             </a>
           </div>
         </div>
